--- a/src/components/Sidebar/Main/Main.css
+++ b/src/components/Sidebar/Main/Main.css
@@ -29,7 +29,7 @@
     font-size: 56px;
     color: #c4c7c5;
     font-weight: 500;
-    padding: 20px
+    padding: 20px;
 }
 
 .main .greet span {
@@ -88,11 +88,13 @@
     gap: 20px;
     background-color: #f0f4f9;
     padding: 10px 20px;
-    border-radius: 50px;;
+    border-radius: 50px;
     
 }
 
 .search-box .searchbar-icon {
+    width: 32px;
+    height: 32px;
     cursor: pointer;
 }
 
@@ -174,5 +176,22 @@
     font-size: 17px;
     font-weight: 300;
     line-height: 1.8;
+}
 
+@media (max-width:600px){
+    .main-bottom input{
+        flex: none;
+        width: 150px;
+    }
+    .main-bottom .searchbar-icon{
+        width: 20px;
+        height: 20px;
+    }
+    .search-box {
+        padding: 5px 10px;
+    }
+
+    .search-box div{
+        gap: 5px;
+    }
 }
